2000-06-20  Alexander Aganichev <AAganichev@hypercom.com>

	* ar.c (normalize): Correct pointer comparison when checking for
	backslashes.
	(main): Likewise.
	* bucomm.c (make_tempname): Likewise.

	* ieee.c (ieee_start_compilation_unit): Correct pointer comparison
	and search for backslashes in the original pathname.
	(ieee_add_bb11): Likewise.

2000-06-18  Nick Clifton  <nickc@redhat.com>

	* ar.c (print_contents): Improve verbose message.

2000-06-15  H.J. Lu  <hjl@gnu.org>

	* dyn-string.c: Removed. Not needed with dyn-string.c in
	libiberty.
	* dyn-string.h: Likewise.

	* Makefile.am: Remove references to dyn-string.c and
	dyn-string.h. Rebuild dependency.
	* Makefile.in: Rebuild.

2000-06-15  H.J. Lu  <hjl@gnu.org>

	* binutils.texi: Put a warning on copying relocatable object
	files between two different formats.

2000-06-13  DJ Delorie  <dj@cygnus.com>

	* rcparse.y (control): ICON controls take an id as the first
	parameter, not an optional string.  Also, call new convenience
	function that takes res_id's.
	* resrc.c (define_control): missing text means zero-length string,
	not zero ID.
	(define_icon_control): New.
	* windres.h: declare define_icon_control.

2000-06-13  H.J. Lu  <hjl@gnu.org>

	* configure: Regenerate.

2000-06-08  David O'Brien  <obrien@FreeBSD.org>

	* configure.in (VERSION): Update to show this is the CVS mainline.

2000-06-02  David O'Brien  <obrien@FreeBSD.org>

	* strings.c (isgraphic): Interpret <TAB> as a printable character,
	analogous to <SPACE>.

2000-05-30  Alan Modra  <alan@linuxcare.com.au>

	* objdump.c (display_target_list): Use bfd_close_all_done, not
	bfd_close to fix crash caused by 2000-05-24 change.

2000-05-25  DJ Delorie  <dj@cygnus.com>

	* resrc.c (close_input_stream): zero out cpp_pipe after closing it.

2000-05-26  Alan Modra  <alan@linuxcare.com.au>

	* Makefile.am: Update dependencies with "make dep-am"
	* Makefile.in: Regenerate.

2000-05-26  Eli Zaretskii  <eliz@is.elta.co.il>

	* ar.c: Include filenames.h.